# LaTexCV

./: .gitignore  Makefile  README.md  build_binary.py  cvgen_entry.py  generate_resume.py  gui_resume.py  pyproject.toml  requirements.txt  resume.tex  resume.yaml  uv_requirements.txt
.github/workflows/: build.yml
cls/: artdeco.cls  bauhaus.cls  deedy-resume.cls  deedy.cls  minimalist.cls  moderncv.cls
core/: cv_compiler.py  yaml_handler.py
core/generator/: __init__.py  generic.py
docs/: INSTALL.md
gui/: __init__.py
src/: __main__.py
src/cli/: __init__.py  cli_main.py
src/controllers/: resume_controller.py
src/core/: __init__.py  cv_compiler.py  yaml_handler.py
src/core/generator/: __init__.py  resume_generator.py
src/gui/: main_window.py  section_manager.py
src/gui/controllers/: resume_controller.py
src/gui/fonts/: __init__.py
src/gui/views/: contact_section.py  education_section.py  experience_section.py  interests_section.py  item_section.py  name_section.py  section_view.py  skills_section.py  summary_section.py
src/latexcv/: main.py
src/models/: resume_model.py
src/views/: contact_section.py  education_section.py  interests_section.py  item_section.py  name_section.py  section_view.py  skills_section.py  summary_section.py
tests/: test_resume_order.py
